--- a/apache.conf
+++ b/apache.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-    DocumentRoot /app/public
+    DocumentRoot /var/www/html/public
 
-    <Directory /app/public>
+    <Directory /var/www/html/public>
         Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
